@@ -7,6 +7,7 @@
  - merged all "get events" into one function (goffy)
  - created functin to get cats for filters (goffy)
  - created new block templates (goffy)
+ - fixed bug in output excel (goffy)
 
 ==============================================================
 1.0.4 RC1 [2022/08/29]
